# employee_attrition

./: .coverage  .gitignore  MANIFEST.in  README.md  predict.py  pyproject.toml  requirements.txt  setup.py  train_and_validate.py
.github/workflows/: employee_attrition_cicd.yml
api/: Dockerfile  api_requirements.txt  app.py  dockerfile.yml
api/employee_attrition_model/trained_models/: employee_attrition_model.joblib
data/: wa_fn_usec_hr_employee_attrition_tsv.csv
employee_attrition_model/config/: model_config.py
employee_attrition_model/data/: data_processor.py
employee_attrition_model/models/: model_trainer.py
employee_attrition_model/utils/: validation.py
models/: employee_attrition_model.joblib
src/config/: model_config.py
src/data/: data_processor.py
src/models/: model_trainer.py
src/utils/: evaluation.py
tests/: test_data_preprocessor.py  test_model_trainer.py  test_validation.py
