[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "employee_attrition_predictor"
version = "0.1.9"
description = "A model to predict employee attrition"
authors = [
    {name = "Roopa Hegde", email = "roopa.hegde@gmail.com"},
]
requires-python = ">=3.9.0"
license = {text = "BSD-3"}
readme = "README.md"

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = "--verbose"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests"
]